--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "path": "^0.12.7",
     "pg": "^8.16.3"
   },
   "devDependencies": {
